--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,10 @@ canvas{
   position: absolute;
   top: 0;
   left: 0;
+  height:100%;
 }
 
 #particles-js{
-  background-image: linear-gradient(45deg, #16627b 30%, #20758c 100%);
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -45,7 +45,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 #backgroundImage {
-    height: 250px;
+    height: 100%;
     background-image: linear-gradient(45deg, #16627b 30%, #20758c 100%);
     position: relative;
     background-position: center;
